--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -306,7 +306,7 @@ input[type="radio"] {
     }
     .input-group-addon {
       border-left: none;
-      background-color: transparent;
+      background-color: @white;
       cursor: default;
 
       &.cursor-pointer {
