--- a/data/plugins/jqgrid/less/custom-jqgrid.less
+++ b/data/plugins/jqgrid/less/custom-jqgrid.less
@@ -407,6 +407,8 @@
   text-align: center;
   font-size: 14px;
   margin: -11px auto auto -35px;
+  background-color: initial;
+  border: 0;
 }
 
 .ui-jqgrid .jqgrid-overlay {
@@ -414,6 +416,20 @@
   background-color: #616161;
   position: absolute;
 }
+
+.ui-jqgrid .jqgrid-overlay.custom-overlay {
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: .3;
+  cursor: wait;
+  filter: alpha(opacity=30);
+  /* support: IE8 */
+}
+
 
 /* Toolbar Search Menu. Nav menu */
 .ui-search-menu,
@@ -485,18 +501,6 @@ a.clearsearchclass {
   filter: alpha(opacity=30);
   /* support: IE8 */
   display: none;
-}
-
-.custom-overlay {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: .3;
-  cursor: wait;
-  filter: alpha(opacity=30);
-  /* support: IE8 */
 }
 
 .ui-jqgrid-toppager .ui-pg-table .ui-pg-button:hover {
