Improvement(design): Modify indeterminate state for fancytree checkboxes

--- a/data/plugins/fancytree/less/skin-common.less
+++ b/data/plugins/fancytree/less/skin-common.less
@@ -167,7 +167,8 @@ span.fancytree-drag-helper-img,
 	vertical-align: top;
 	background-repeat: no-repeat;
 	background-position: left;
-	.setBgImageUrl("icons.gif");
+	background-size: 96px 200px;
+	.setBgImageUrl("icons.svg");
 	.setBgPos(0, 0);
 }
 span.fancytree-icon,
