--- a/data/plugins/jqgrid/less/custom-jqgrid.less
+++ b/data/plugins/jqgrid/less/custom-jqgrid.less
@@ -196,6 +196,10 @@
   padding-left: 5px;
 }
 
+.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td{
+  overflow: visible;
+}
+
 .ui-jqgrid .ui-jqgrid-htable {
   border-bottom: 1px solid #c3c3c3;
 }
