Feature(Layout): Added summernote-cleaner

--- a/data/styles/base/custom/custom-fonts.less
+++ b/data/styles/base/custom/custom-fonts.less
@@ -216,3 +216,14 @@
   src: local('Open Sans Bold'), local('OpenSans-Bold'), url('fonts/opensans-bold-latin-webfont.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+/*Added for summernote plugin*/
+@font-face {
+  font-family: "summernote";
+  font-style: normal;
+  font-weight: normal;
+  src: url("fonts/summernote.eot?546c01739436985e5a21a8cb325521f3");
+  src: url("fonts/summernote.eot?#iefix") format("embedded-opentype"),
+  url("fonts/summernote.woff?546c01739436985e5a21a8cb325521f3") format("woff"),
+  url("fonts/summernote.ttf?546c01739436985e5a21a8cb325521f3") format("truetype")
+}
