--- a/data/plugins/summernote/less/icons.less
+++ b/data/plugins/summernote/less/icons.less
@@ -1,3 +1,4 @@
+/* Modified
 @font-face {
   font-family: "summernote";
   font-style: normal;
@@ -5,6 +6,7 @@
   src: url("font/summernote.eot?546c01739436985e5a21a8cb325521f3");
   src: url("font/summernote.eot?#iefix") format("embedded-opentype"), url("font/summernote.woff?546c01739436985e5a21a8cb325521f3") format("woff"), url("font/summernote.ttf?546c01739436985e5a21a8cb325521f3") format("truetype")
 }
+*/
 [class^="note-icon-"]:before, [class*=" note-icon-"]:before {
   display: inline-block;
   font: normal normal normal 14px summernote;
