BugFix(Popovers): Fixed z-index of popover elements

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -7,6 +7,11 @@
 @content-page-pad-side:       20px;
 @content-page-pad-bottom:     20px;
 
+///* Z-INDEX */
+// --------------------------------------------------
+@zindex-popover:           1027;
+@zindex-tooltip:           1028;
+
 ///* SIDEBAR */
 // --------------------------------------------------
 
