Feature(Layout): Modified typography

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -161,3 +161,16 @@
 @modal-footer-bg:             15px;
 @modal-footer-bg:             #fafafa;
 
+//== Typography
+@font-size-base:          16px;
+
+@font-size-h1:            66px;// ~32px
+@font-size-h2:            50px;// ~26px
+@font-size-h3:            37px; // ~22px
+@font-size-h4:            28px; // ~18px
+@font-size-h5:            21px; // ~15px
+@font-size-h6:            16px;                //  14px
+
+@headings-line-height:    1.3;
+
+
