Feature(Layout): Update addNotification function to display a corresponding icon

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -727,7 +727,7 @@
   .fa {
     font-size: 140%;
     margin-right: 10px;
-    vertical-align: middle;
+    vertical-align: bottom;
   }
 
   button.close {
