Bugfix(jqGrid): Added a class for word breaking

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -826,3 +826,9 @@
     }
   }
 }
+
+.ui-jqgrid .ui-jqgrid-btable.word-break tbody tr.jqgrow td,
+.word-break{
+  white-space: normal;
+  word-break: break-word;
+}
