Bugfix(jqGrid): Added a class for word breaking

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -828,6 +828,7 @@
 }
 
 .ui-jqgrid .ui-jqgrid-btable.word-break tbody tr.jqgrow td,
+.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td.word-break,
 .word-break{
   white-space: normal;
   word-break: break-word;
