Bugfix(jqGrid): Added a class for word breaking

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -831,5 +831,5 @@
 .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td.word-break,
 .word-break{
   white-space: normal;
-  word-break: break-word;
+  word-break: break-all;
 }
