Improvement(Plugins): Fancytree upgrade

--- a/data/plugins/fancytree/less/ui.fancytree.less
+++ b/data/plugins/fancytree/less/ui.fancytree.less
@@ -204,7 +204,7 @@ span.fancytree-node.fancytree-drop-target {
 		// Active tree:
 		&.fancytree-treefocus {
 			span.fancytree-node.fancytree-focused span.fancytree-title {
-				border-color: @brand-primary;
+				// border-color: @brand-primary;
 			}
 			span.fancytree-node.fancytree-active span.fancytree-title {
 				background-color: @fancy-active-color;
