--- a/data/plugins/daterangepicker/less/daterangepicker.less
+++ b/data/plugins/daterangepicker/less/daterangepicker.less
@@ -8,441 +8,481 @@
 @daterangepicker-full-width: 100%;
 @daterangepicker-row-height: 20px;
 
+/*  Larger Screen Styling */
 .daterangepicker {
-  background: @white;
-  border-radius: 4px;
-  color: inherit;
-  left: 20px;
-  margin-top: 1px;
-  padding: 4px;
-  position: absolute;
-  top: 100px;
-  width: 278px;
-  &:before {
-    border-bottom-color: rgba(0, 0, 0, 0.2);
-    border-bottom: 7px solid @gray-80;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: -7px;
-  }
-  &:after {
-    border-bottom-color: rgba(0, 0, 0, 0.2);
-    border-bottom: 6px solid @white;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: -6px;
-  }
-  .calendar {
-    display: none;
-    margin: 4px;
-    max-width: 270px;
-    th {
-      min-width: @daterangepicker-calendar-col-width;
-      text-align: center;
-      white-space: nowrap;
-    }
-    td {
-      min-width: @daterangepicker-calendar-col-width;
-      text-align: center;
-      white-space: nowrap;
-    }
-  }
-  .calendar.single {
-    .calendar-table {
-      border: none;
-    }
-  }
-  .calendar-table {
-    background: @white;
-    border-radius: 4px;
-    border: 1px solid @white;
-    padding: 4px;
-  }
-  table {
-    margin: 0;
-    width: @daterangepicker-full-width;
-  }
-  td {
-    border-radius: 4px;
-    border: 1px solid transparent;
-    cursor: pointer;
-    height: @daterangepicker-row-height;
-    text-align: center;
-    white-space: nowrap;
-    width: @daterangepicker-col-width;
-  }
-  th {
-    border-radius: 4px;
-    border: 1px solid transparent;
-    cursor: pointer;
-    height: @daterangepicker-row-height;
-    text-align: center;
-    white-space: nowrap;
-    width: @daterangepicker-col-width;
-  }
-  td.available {
-    &:hover {
-      background-color: @gray-93;
-      border-color: transparent;
-      color: inherit;
-    }
-  }
-  th.available {
-    &:hover {
-      background-color: @gray-93;
-      border-color: transparent;
-      color: inherit;
-    }
-  }
-  td.week {
-    color: @gray-80;
-    font-size: 80%;
-  }
-  th.week {
-    color: @gray-80;
-    font-size: 80%;
-  }
-  td.in-range {
-    background-color: #ebf4f8;
-    border-color: transparent;
-    border-radius: 0;
-    color: #000000;
-  }
-  td.start-date {
-    border-radius: 4px 0 0 4px;
-  }
-  td.end-date {
-    border-radius: 0 4px 4px 0;
-  }
-  td.start-date.end-date {
-    border-radius: 4px;
-  }
-  td.active {
-    background-color: @blue-normal;
-    border-color: transparent;
-    color: @white;
-    &:hover {
-      background-color: @blue-normal;
-      border-color: transparent;
-      color: @white;
-    }
-  }
-  th.month {
-    width: auto;
-  }
-  td.disabled {
-    color: @gray-76;
-    cursor: not-allowed;
-    text-decoration: line-through;
-  }
-  option.disabled {
-    color: @gray-76;
-    cursor: not-allowed;
-    text-decoration: line-through;
-  }
-  select.monthselect {
-    cursor: default;
-    font-size: 12px;
-    height: auto;
-    margin-right: 2%;
-    margin: 0;
-    padding: 1px;
-    width: 56%;
-  }
-  select.yearselect {
-    cursor: default;
-    font-size: 12px;
-    height: auto;
-    margin: 0;
-    padding: 1px;
-    width: 40%;
-  }
-  .input-mini {
-    border-radius: 4px;
-    border: 1px solid @gray-80;
-    color: #555555;
-    display: block;
-    height: 30px;
-    line-height: 30px;
-    margin: 0 0 5px 0;
-    padding: 0 6px 0 28px;
-    vertical-align: middle;
-    width: @daterangepicker-full-width;
-  }
-  .input-mini.active {
-    border-radius: 4px;
-    border: 1px solid @blue-hover;
-  }
-  .daterangepicker_input {
-    position: relative;
-    i {
-      left: 8px;
-      position: absolute;
-      top: 8px;
-    }
-  }
-  .calendar-time {
-    line-height: 30px;
-    margin: 5px auto;
-    padding-left: 28px;
-    position: relative;
-    text-align: center;
-    select.disabled {
-      color: @gray-80;
-      cursor: not-allowed;
-    }
-  }
+	background: @white;
+	border-radius: 4px;
+	color: inherit;
+	left: 20px;
+	padding: 4px;
+	position: absolute;
+	margin-top: 1px;
+	top: 100px;
+	width: 278px;
+	&:before {
+		position: absolute;
+		display: inline-block;
+		border-bottom-color: rgba(0, 0, 0, 0.2);
+		content: '';
+		top: -7px;
+		border-right: 7px solid transparent;
+		border-left: 7px solid transparent;
+		border-bottom: 7px solid @gray-80;
+	}
+	&:after {
+		position: absolute;
+		display: inline-block;
+		border-bottom-color: rgba(0, 0, 0, 0.2);
+		content: '';
+		top: -6px;
+		border-right: 6px solid transparent;
+		border-bottom: 6px solid @white;
+		border-left: 6px solid transparent;
+	}
+	.calendar {
+		display: none;
+		max-width: 270px;
+		margin: 4px;
+		th {
+			white-space: nowrap;
+			text-align: center;
+			min-width: @daterangepicker-calendar-col-width;
+		}
+		td {
+			white-space: nowrap;
+			text-align: center;
+			min-width: @daterangepicker-calendar-col-width;
+		}
+	}
+	.calendar.single {
+		.calendar-table {
+			border: none;
+		}
+	}
+	.calendar-table {
+		border: 1px solid @white;
+		padding: 4px;
+		border-radius: 4px;
+		background: @white;
+	}
+	table {
+		width: @daterangepicker-full-width;
+		margin: 0;
+	}
+	td {
+		text-align: center;
+		width: @daterangepicker-col-width;
+		height: @daterangepicker-row-height;
+		border-radius: 4px;
+		border: 1px solid transparent;
+		white-space: nowrap;
+		cursor: pointer;
+	}
+	th {
+		text-align: center;
+		width: @daterangepicker-col-width;
+		height: @daterangepicker-row-height;
+		border-radius: 4px;
+		border: 1px solid transparent;
+		white-space: nowrap;
+		cursor: pointer;
+	}
+	td.available {
+		&:hover {
+			background-color: @gray-93;
+			border-color: transparent;
+			color: inherit;
+		}
+	}
+	th.available {
+		&:hover {
+			background-color: @gray-93;
+			border-color: transparent;
+			color: inherit;
+		}
+	}
+	td.week {
+		font-size: 80%;
+		color: @gray-80;
+	}
+	th.week {
+		font-size: 80%;
+		color: @gray-80;
+	}
+	td.off {
+		background: @white;
+		border-color: transparent;
+		color: @gray-76;
+	}
+	td.off.in-range {
+		background: @white;
+		border-color: transparent;
+		color: @gray-76;
+	}
+	td.off.start-date {
+		background: @white;
+		border-color: transparent;
+		color: @gray-76;
+	}
+	td.off.end-date {
+		background: @white;
+		border-color: transparent;
+		color: @gray-76;
+	}
+	td.in-range {
+		background-color: #ebf4f8;
+		border-color: transparent;
+		color: #000000;
+		border-radius: 0;
+	}
+	td.start-date {
+		border-radius: 4px 0 0 4px;
+	}
+	td.end-date {
+		border-radius: 0 4px 4px 0;
+	}
+	td.start-date.end-date {
+		border-radius: 4px;
+	}
+	td.active {
+		background-color: @blue-normal;
+		border-color: transparent;
+		color: @white;
+		&:hover {
+			background-color: @blue-normal;
+			border-color: transparent;
+			color: @white;
+		}
+	}
+	th.month {
+		width: auto;
+	}
+	td.disabled {
+		color: @gray-76;
+		cursor: not-allowed;
+		text-decoration: line-through;
+	}
+	option.disabled {
+		color: @gray-76;
+		cursor: not-allowed;
+		text-decoration: line-through;
+	}
+	select.monthselect {
+		font-size: 12px;
+		padding: 1px;
+		height: auto;
+		margin: 0;
+		cursor: default;
+		margin-right: 2%;
+		width: 56%;
+	}
+	select.yearselect {
+		font-size: 12px;
+		padding: 1px;
+		height: auto;
+		margin: 0;
+		cursor: default;
+		width: 40%;
+	}
+	select.hourselect {
+		width: 50px;
+		margin-bottom: 0;
+	}
+	select.minuteselect {
+		width: 50px;
+		margin-bottom: 0;
+	}
+	select.secondselect {
+		width: 50px;
+		margin-bottom: 0;
+	}
+	select.ampmselect {
+		width: 50px;
+		margin-bottom: 0;
+	}
+	.input-mini {
+		border: 1px solid @gray-80;
+		border-radius: 4px;
+		color: #555;
+		height: 30px;
+		line-height: 30px;
+		display: block;
+		vertical-align: middle;
+		margin: 0 0 5px 0;
+		padding: 0 6px 0 28px;
+		width: @daterangepicker-full-width;
+	}
+	.input-mini.active {
+		border: 1px solid @blue-hover;
+		border-radius: 4px;
+	}
+	.daterangepicker_input {
+		position: relative;
+		i {
+			position: absolute;
+			left: 8px;
+			top: 8px;
+		}
+	}
+	.calendar-time {
+		text-align: center;
+		margin: 5px auto;
+		line-height: 30px;
+		position: relative;
+		padding-left: 28px;
+		select.disabled {
+			color: @gray-80;
+			cursor: not-allowed;
+		}
+	}
 }
+
 .daterangepicker.opensleft {
-  &:before {
-    right: 9px;
-  }
-  &:after {
-    right: 10px;
-  }
+	&:before {
+		right: 9px;
+	}
+	&:after {
+		right: 10px;
+	}
 }
+
 .daterangepicker.openscenter {
-  &:before {
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    right: 0;
-    width: 0;
-  }
-  &:after {
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    right: 0;
-    width: 0;
-  }
+	&:before {
+		left: 0;
+		right: 0;
+		width: 0;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&:after {
+		left: 0;
+		right: 0;
+		width: 0;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
+
 .daterangepicker.opensright {
-  &:before {
-    left: 9px;
-  }
-  &:after {
-    left: 10px;
-  }
+	&:before {
+		left: 9px;
+	}
+	&:after {
+		left: 10px;
+	}
 }
+
 .daterangepicker.dropup {
-  margin-top: -5px;
-  &:before {
-    border-bottom: initial;
-    border-top: 7px solid @gray-80;
-    bottom: -7px;
-    top: initial;
-  }
-  &:after {
-    border-bottom: initial;
-    border-top: 6px solid @white;
-    bottom: -6px;
-    top: initial;
-  }
+	margin-top: -5px;
+	&:before {
+		top: initial;
+		bottom: -7px;
+		border-bottom: initial;
+		border-top: 7px solid @gray-80;
+	}
+	&:after {
+		top: initial;
+		bottom: -6px;
+		border-bottom: initial;
+		border-top: 6px solid @white;
+	}
 }
+
 .daterangepicker.dropdown-menu {
-  max-width: none;
-  z-index: 3001;
+	max-width: none;
+	z-index: 3001;
 }
+
 .daterangepicker.single {
-  .ranges {
-    float: none;
-  }
-  .calendar {
-    float: none;
-  }
+	.ranges {
+		float: none;
+	}
+	.calendar {
+		float: none;
+	}
 }
+
 .daterangepicker.show-calendar {
-  .calendar {
-    display: block;
-  }
+	.calendar {
+		display: block;
+	}
 }
-.daterangepicker td.off, .daterangepicker td.off.in-range, .daterangepicker td.off.start-date, .daterangepicker td.off.end-date  {
-  background-color: @white;
-  border-color: transparent;
-  color: @gray-76;
-}
-.daterangepicker select.hourselect, .daterangepicker select.minuteselect, .daterangepicker select.secondselect, .daterangepicker select.ampmselect  {
-  margin-bottom: 0;
-  width: 50px;
-}
+
 .daterangepicker.rtl {
-  .input-mini {
-    padding-left: 6px;
-    padding-right: 28px;
-  }
-  .daterangepicker_input {
-    i {
-      left: auto;
-      right: 8px;
-    }
-  }
+	.input-mini {
+		padding-right: 28px;
+		padding-left: 6px;
+	}
+	.daterangepicker_input {
+		i {
+			left: auto;
+			right: 8px;
+		}
+	}
 }
+
 .ranges {
-  float: none;
-  font-size: 11px;
-  margin: 4px;
-  text-align: left;
-  ul {
-    list-style: none;
-    margin: 0 auto;
-    padding: 0;
-    width: @daterangepicker-full-width;
-  }
-  li {
-    background: @gray-96;
-    border-radius: 4px;
-    border: 1px solid @gray-96;
-    color: @blue-hover;
-    cursor: pointer;
-    font-size: 13px;
-    margin-bottom: 8px;
-    padding: 3px 12px;
-    &:hover {
-      background: @blue-hover;
-      border: 1px solid @blue-hover;
-      color: @white;
-    }
-  }
-  li.active {
-    background: @blue-hover;
-    border: 1px solid @blue-hover;
-    color: @white;
-  }
+	font-size: 11px;
+	float: none;
+	margin: 4px;
+	text-align: left;
+	ul {
+		list-style: none;
+		margin: 0 auto;
+		padding: 0;
+		width: @daterangepicker-full-width;
+	}
+	li {
+		font-size: 13px;
+		background: @gray-96;
+		border: 1px solid #f5f5f5;
+		border-radius: 4px;
+		color: @blue-hover;
+		padding: 3px 12px;
+		margin-bottom: 8px;
+		cursor: pointer;
+		&:hover {
+			background: @blue-hover;
+			border: 1px solid @blue-hover;
+			color: @white;
+		}
+	}
+	li.active {
+		background: @blue-hover;
+		border: 1px solid @blue-hover;
+		color: @white;
+	}
 }
 
 @media (min-width: 564px) {
-  .daterangepicker {
-    width: auto;
-    .ranges {
-      ul {
-        width: 160px;
-      }
-    }
+	.daterangepicker {
+		width: auto;
+		.ranges {
+			ul {
+				width: 160px;
+			}
+		}
+	}
 
-    &.single {
-      .ranges {
-        ul {
-          width: 100%;
-        }
-      }
-      .calendar.left {
-        clear: none;
-      }
+	.daterangepicker.single {
+		.ranges {
+			ul {
+				width: 100%;
+			}
+		}
+		.calendar.left {
+			clear: none;
+		}
+	}
 
-      &.ltr {
-        .ranges {
-          float: left;
-        }
-        .calendar {
-          float: left;
-        }
-      }
+	.daterangepicker.single.ltr {
+		.ranges {
+			float: left;
+		}
+		.calendar {
+			float: left;
+		}
+	}
 
-      &.rtl {
-        .ranges {
-          float: right;
-        }
-        .calendar {
-          float: right;
-        }
-      }
-    }
+	.daterangepicker.single.rtl {
+		.ranges {
+			float: right;
+		}
+		.calendar {
+			float: right;
+		}
+	}
 
-    &.ltr {
-      direction: ltr;
-      text-align: left;
-      .calendar.left {
-        clear: left;
-        margin-right: 0;
-        .calendar-table {
-          border-bottom-right-radius: 0;
-          border-right: none;
-          border-top-right-radius: 0;
-          padding-right: 12px;
-        }
-      }
-      .calendar.right {
-        margin-left: 0;
-        .calendar-table {
-          border-bottom-left-radius: 0;
-          border-left: none;
-          border-top-left-radius: 0;
-        }
-      }
-      .left {
-        .daterangepicker_input {
-          padding-right: 12px;
-        }
-      }
-      .ranges {
-        float: left;
-      }
-      .calendar {
-        float: left;
-      }
-    }
+	.daterangepicker.ltr {
+		direction: ltr;
+		text-align: left;
+		.calendar.left {
+			clear: left;
+			margin-right: 0;
+			.calendar-table {
+				border-right: none;
+				border-top-right-radius: 0;
+				border-bottom-right-radius: 0;
+				padding-right: 12px;
+			}
+		}
+		.calendar.right {
+			margin-left: 0;
+			.calendar-table {
+				border-left: none;
+				border-top-left-radius: 0;
+				border-bottom-left-radius: 0;
+			}
+		}
+		.left {
+			.daterangepicker_input {
+				padding-right: 12px;
+			}
+		}
+		.ranges {
+			float: left;
+		}
+		.calendar {
+			float: left;
+		}
+	}
 
-    &.rtl {
-      direction: rtl;
-      text-align: right;
-      .calendar.left {
-        clear: right;
-        margin-left: 0;
-        .calendar-table {
-          border-bottom-left-radius: 0;
-          border-left: none;
-          border-top-left-radius: 0;
-          padding-left: 12px;
-        }
-      }
-      .calendar.right {
-        margin-right: 0;
-        .calendar-table {
-          border-bottom-right-radius: 0;
-          border-right: none;
-          border-top-right-radius: 0;
-        }
-      }
-      .left {
-        .daterangepicker_input {
-          padding-left: 12px;
-        }
-      }
-      .ranges {
-        float: right;
-        text-align: right;
-      }
-      .calendar {
-        float: right;
-        text-align: right;
-      }
-    }
-  }
+	.daterangepicker.rtl {
+		direction: rtl;
+		text-align: right;
+		.calendar.left {
+			clear: right;
+			margin-left: 0;
+			.calendar-table {
+				border-left: none;
+				border-top-left-radius: 0;
+				border-bottom-left-radius: 0;
+				padding-left: 12px;
+			}
+		}
+		.calendar.right {
+			margin-right: 0;
+			.calendar-table {
+				border-right: none;
+				border-top-right-radius: 0;
+				border-bottom-right-radius: 0;
+			}
+		}
+		.left {
+			.daterangepicker_input {
+				padding-left: 12px;
+			}
+		}
+		.ranges {
+			text-align: right;
+			float: right;
+		}
+		.calendar {
+			text-align: right;
+			float: right;
+		}
+	}
 }
 
 @media (min-width: 730px) {
-  .daterangepicker {
-    .ranges {
-      width: auto;
-    }
+	.daterangepicker {
+		.ranges {
+			width: auto;
+		}
+		.calendar.left {
+			clear: none !important;
+		}
+	}
 
-    &.ltr .ranges {
-      float: left;
-    }
+	.daterangepicker.ltr {
+		.ranges {
+			float: left;
+		}
+	}
 
-    &.rtl .ranges {
-      float: right;
-    }
-
-    .calendar.left {
-      clear: none !important;
-    }
-  }
+	.daterangepicker.rtl {
+		.ranges {
+			float: right;
+		}
+	}
 }
