--- a/data/plugins/magnific/less/magnific.less
+++ b/data/plugins/magnific/less/magnific.less
@@ -1,61 +1,25 @@
 /* Magnific Popup CSS */
-
-@import "magnific_settings.less";
-
-////////////////////////
-//
-// Contents:
-//
-// 1. General styles
-//    - Transluscent overlay
-//    - Containers, wrappers
-//    - Cursors
-//    - Helper classes
-// 2. Appearance
-//    - Preloader & text that displays error messages
-//    - CSS reset for buttons
-//    - Close icon
-//    - "1 of X" counter
-//    - Navigation (left/right) arrows
-//    - Iframe content type styles
-//    - Image content type styles
-//    - Media query where size of arrows is reduced
-//    - IE7 support
-//
-////////////////////////
-
-
-
-////////////////////////
-// 1. General styles
-////////////////////////
-
-// Transluscent overlay
 .mfp-bg {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: (@mfp-z-index-base + 2);
+  z-index: 1042;
   overflow: hidden;
   position: fixed;
-  background: @mfp-overlay-color;
-  opacity: @mfp-overlay-opacity;
-}
+  background: #0b0b0b;
+  opacity: 0.8; }
 
-// Wrapper for popup
 .mfp-wrap {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: (@mfp-z-index-base + 3);
+  z-index: 1043;
   position: fixed;
   outline: none !important;
-  -webkit-backface-visibility: hidden; // fixes webkit bug that can cause "false" scrollbar
-}
+  -webkit-backface-visibility: hidden; }
 
-// Root container
 .mfp-container {
   text-align: center;
   position: absolute;
@@ -63,117 +27,64 @@
   height: 100%;
   left: 0;
   top: 0;
-  padding: 0 @mfp-popup-padding-left;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  padding: 0 8px;
+  box-sizing: border-box; }
 
-// Vertical centerer helper
-.mfp-container {
-  &:before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-  }
-}
+.mfp-container:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle; }
 
-// Remove vertical centering when popup has class `mfp-align-top`
-.mfp-align-top {
-  .mfp-container {
-    &:before {
-      display: none;
-    }
-  }
-}
+.mfp-align-top .mfp-container:before {
+  display: none; }
 
-// Popup content holder
 .mfp-content {
   position: relative;
   display: inline-block;
   vertical-align: middle;
   margin: 0 auto;
   text-align: left;
-  z-index: (@mfp-z-index-base + 5);
-}
-.mfp-inline-holder,
-.mfp-ajax-holder {
-  .mfp-content {
-    width: 100%;
-    cursor: auto;
-  }
-}
+  z-index: 1045; }
 
-// Cursors
+.mfp-inline-holder .mfp-content,
+.mfp-ajax-holder .mfp-content {
+  width: 100%;
+  cursor: auto; }
+
 .mfp-ajax-cur {
-  cursor: progress;
-}
-.mfp-zoom-out-cur {
-  &, .mfp-image-holder .mfp-close {
-    cursor: -moz-zoom-out;
-    cursor: -webkit-zoom-out;
-    cursor: zoom-out;
-  }
-}
+  cursor: progress; }
+
+.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+  cursor: -moz-zoom-out;
+  cursor: -webkit-zoom-out;
+  cursor: zoom-out; }
+
 .mfp-zoom {
   cursor: pointer;
   cursor: -webkit-zoom-in;
   cursor: -moz-zoom-in;
-  cursor: zoom-in;
-}
-.mfp-auto-cursor {
-  .mfp-content {
-    cursor: auto;
-  }
-}
+  cursor: zoom-in; }
+
+.mfp-auto-cursor .mfp-content {
+  cursor: auto; }
 
 .mfp-close,
 .mfp-arrow,
 .mfp-preloader,
 .mfp-counter {
-  -webkit-user-select:none;
+  -webkit-user-select: none;
   -moz-user-select: none;
-  user-select: none;
-}
+  user-select: none; }
 
-// Hide the image during the loading
-.mfp-loading {
-  &.mfp-figure {
-    display: none;
-  }
-}
+.mfp-loading.mfp-figure {
+  display: none; }
 
-// Helper class that hides stuff
-.mfp-use-visuallyhidden(true) {
-       // From HTML5 Boilerplate https://github.com/h5bp/html5-boilerplate/blob/v4.2.0/doc/css.md#visuallyhidden
-       .mfp-hide {
-         border: 0 !important;
-         clip: rect(0 0 0 0) !important;
-         height: 1px !important;
-         margin: -1px !important;
-         overflow: hidden !important;
-         padding: 0 !important;
-         position: absolute !important;
-         width: 1px !important;
-       }
-     }
-.mfp-use-visuallyhidden(false) {
-  .mfp-hide {
-    display: none !important;
-  }
-}
+.mfp-hide {
+  display: none !important; }
 
-.mfp-use-visuallyhidden(@mfp-use-visuallyhidden);
-
-
-////////////////////////
-// 2. Appearance
-////////////////////////
-
-// Preloader and text that displays error messages
 .mfp-preloader {
-  color: @mfp-controls-text-color;
+  color: #CCC;
   position: absolute;
   top: 50%;
   width: auto;
@@ -181,435 +92,260 @@
   margin-top: -0.8em;
   left: 8px;
   right: 8px;
-  z-index: (@mfp-z-index-base + 4);
-  a {
-    color: @mfp-controls-text-color;
-    &:hover {
-      color: @mfp-controls-text-color-hover;
-    }
-  }
-}
+  z-index: 1044; }
+  .mfp-preloader a {
+    color: #CCC; }
+    .mfp-preloader a:hover {
+      color: #FFF; }
 
-// Hide preloader when content successfully loaded
-.mfp-s-ready {
-  .mfp-preloader {
-    display: none;
-  }
-}
+.mfp-s-ready .mfp-preloader {
+  display: none; }
 
-// Hide content when it was not loaded
-.mfp-s-error {
-  .mfp-content {
-    display: none;
-  }
-}
+.mfp-s-error .mfp-content {
+  display: none; }
 
-// CSS-reset for buttons
-button {
-  &.mfp-close,
-  &.mfp-arrow {
-    overflow: visible;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    -webkit-appearance: none;
-    display: block;
-    outline: none;
-    padding: 0;
-    z-index: @mfp-z-index-base + 6;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-  &::-moz-focus-inner {
-    padding: 0;
-    border: 0
-  }
-}
+button.mfp-close,
+button.mfp-arrow {
+  overflow: visible;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  -webkit-appearance: none;
+  display: block;
+  outline: none;
+  padding: 0;
+  z-index: 1046;
+  box-shadow: none;
+  touch-action: manipulation; }
 
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0; }
 
-// Close icon
 .mfp-close {
   width: 44px;
   height: 44px;
   line-height: 44px;
-
   position: absolute;
   right: 0;
   top: 0;
   text-decoration: none;
   text-align: center;
-  opacity: @mfp-controls-opacity;
-
+  opacity: 0.65;
   padding: 0 0 18px 10px;
-  color: @mfp-controls-color;
-
+  color: #FFF;
   font-style: normal;
   font-size: 28px;
-  font-family: Arial, Baskerville, monospace;
+  font-family: Arial, Baskerville, monospace; }
+  .mfp-close:hover,
+  .mfp-close:focus {
+    opacity: 1; }
+  .mfp-close:active {
+    top: 1px; }
 
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
+.mfp-close-btn-in .mfp-close {
+  color: #333; }
 
-  &:active {
-    top: 1px;
-  }
-}
-.mfp-close-btn-in {
-  .mfp-close {
-    color: @mfp-inner-close-icon-color;
-  }
-}
-.mfp-image-holder,
-.mfp-iframe-holder {
-  .mfp-close {
-    color: @mfp-controls-color;
-    right: -6px;
-    text-align: right;
-    padding-right: 6px;
-    width: 100%;
-  }
-}
+.mfp-image-holder .mfp-close,
+.mfp-iframe-holder .mfp-close {
+  color: #FFF;
+  right: -6px;
+  text-align: right;
+  padding-right: 6px;
+  width: 100%; }
 
-// "1 of X" counter
 .mfp-counter {
   position: absolute;
   top: 0;
   right: 0;
-  color: @mfp-controls-text-color;
+  color: #CCC;
   font-size: 12px;
   line-height: 18px;
-  white-space: nowrap;
-}
+  white-space: nowrap; }
 
-// Navigation arrows
-.mfp-include-arrows(true) {
-   .mfp-arrow {
-     position: absolute;
-     opacity: @mfp-controls-opacity;
-     margin: 0;
-     top: 50%;
-     margin-top: -55px;
-     padding: 0;
-     width: 90px;
-     height: 110px;
-     -webkit-tap-highlight-color: rgba(0,0,0,0);
-     &:active {
-       margin-top: -54px;
-     }
-     &:hover,
-     &:focus {
-       opacity: 1;
-     }
-     &:before,
-     &:after,
-     .mfp-b,
-     .mfp-a {
-       content: '';
-       display: block;
-       width: 0;
-       height: 0;
-       position: absolute;
-       left: 0;
-       top: 0;
-       margin-top: 35px;
-       margin-left: 35px;
-       border: medium inset transparent;
-     }
+.mfp-arrow {
+  position: absolute;
+  opacity: 0.65;
+  margin: 0;
+  top: 50%;
+  margin-top: -55px;
+  padding: 0;
+  width: 90px;
+  height: 110px;
+  -webkit-tap-highlight-color: transparent; }
+  .mfp-arrow:active {
+    margin-top: -54px; }
+  .mfp-arrow:hover,
+  .mfp-arrow:focus {
+    opacity: 1; }
+  .mfp-arrow:before,
+  .mfp-arrow:after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-top: 35px;
+    margin-left: 35px;
+    border: medium inset transparent; }
+  .mfp-arrow:after {
+    border-top-width: 13px;
+    border-bottom-width: 13px;
+    top: 8px; }
+  .mfp-arrow:before {
+    border-top-width: 21px;
+    border-bottom-width: 21px;
+    opacity: 0.7; }
 
-     &:after,
-     .mfp-a {
+.mfp-arrow-left {
+  left: 0; }
+  .mfp-arrow-left:after {
+    border-right: 17px solid #FFF;
+    margin-left: 31px; }
+  .mfp-arrow-left:before {
+    margin-left: 25px;
+    border-right: 27px solid #3F3F3F; }
 
-       border-top-width: 13px;
-       border-bottom-width: 13px;
-       top:8px;
-     }
+.mfp-arrow-right {
+  right: 0; }
+  .mfp-arrow-right:after {
+    border-left: 17px solid #FFF;
+    margin-left: 39px; }
+  .mfp-arrow-right:before {
+    border-left: 27px solid #3F3F3F; }
 
-     &:before,
-     .mfp-b {
-       border-top-width: 21px;
-       border-bottom-width: 21px;
-       opacity: 0.7;
-     }
+.mfp-iframe-holder {
+  padding-top: 40px;
+  padding-bottom: 40px; }
+  .mfp-iframe-holder .mfp-content {
+    line-height: 0;
+    width: 100%;
+    max-width: 900px; }
+  .mfp-iframe-holder .mfp-close {
+    top: -40px; }
 
-   }
+.mfp-iframe-scaler {
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  padding-top: 56.25%; }
+  .mfp-iframe-scaler iframe {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    background: #000; }
 
-   .mfp-arrow-left {
-     left: 0;
+/* Main image in popup */
+img.mfp-img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  line-height: 0;
+  box-sizing: border-box;
+  padding: 40px 0 40px;
+  margin: 0 auto; }
 
-     &:after,
-     .mfp-a {
-       border-right: 17px solid @mfp-controls-color;
-       margin-left: 31px;
-     }
-     &:before,
-     .mfp-b {
-       margin-left: 25px;
-       border-right: 27px solid @mfp-controls-border-color;
-     }
-   }
+/* The shadow behind the image */
+.mfp-figure {
+  line-height: 0; }
+  .mfp-figure:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 40px;
+    bottom: 40px;
+    display: block;
+    right: 0;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    background: #444; }
+  .mfp-figure small {
+    color: #BDBDBD;
+    display: block;
+    font-size: 12px;
+    line-height: 14px; }
+  .mfp-figure figure {
+    margin: 0; }
 
-   .mfp-arrow-right {
-     right: 0;
-     &:after,
-     .mfp-a {
-       border-left: 17px solid @mfp-controls-color;
-       margin-left: 39px
-     }
-     &:before,
-     .mfp-b {
-       border-left: 27px solid @mfp-controls-border-color;
-     }
-   }
- }
-.mfp-include-arrows(@mfp-include-arrows);
+.mfp-bottom-bar {
+  margin-top: -36px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  cursor: auto; }
 
+.mfp-title {
+  text-align: left;
+  line-height: 18px;
+  color: #F3F3F3;
+  word-wrap: break-word;
+  padding-right: 36px; }
 
-// Iframe content type
-.mfp-include-iframe-type(true) {
-   .mfp-iframe-holder {
-     padding-top:@mfp-iframe-padding-top;
-     padding-bottom: @mfp-iframe-padding-top;
-     .mfp-content {
-       line-height: 0;
-       width: 100%;
-       max-width: @mfp-iframe-max-width;
-     }
-     .mfp-close {
-       top: -40px;
-     }
-   }
-   .mfp-iframe-scaler {
-     width: 100%;
-     height: 0;
-     overflow: hidden;
-     padding-top: (@mfp-iframe-ratio * 100%);
-     iframe {
-       position: absolute;
-       display: block;
-       top: 0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       box-shadow: @mfp-shadow;
-       background: @mfp-iframe-background;
-     }
-   }
- }
+.mfp-image-holder .mfp-content {
+  max-width: 100%; }
 
-.mfp-include-iframe-type(@mfp-include-iframe-type);
+.mfp-gallery .mfp-image-holder .mfp-figure {
+  cursor: pointer; }
 
+@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
+  /**
+       * Remove all paddings around the image on small screen
+       */
+  .mfp-img-mobile .mfp-image-holder {
+    padding-left: 0;
+    padding-right: 0; }
+  .mfp-img-mobile img.mfp-img {
+    padding: 0; }
+  .mfp-img-mobile .mfp-figure:after {
+    top: 0;
+    bottom: 0; }
+  .mfp-img-mobile .mfp-figure small {
+    display: inline;
+    margin-left: 5px; }
+  .mfp-img-mobile .mfp-bottom-bar {
+    background: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    margin: 0;
+    top: auto;
+    padding: 3px 5px;
+    position: fixed;
+    box-sizing: border-box; }
+    .mfp-img-mobile .mfp-bottom-bar:empty {
+      padding: 0; }
+  .mfp-img-mobile .mfp-counter {
+    right: 5px;
+    top: 3px; }
+  .mfp-img-mobile .mfp-close {
+    top: 0;
+    right: 0;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    text-align: center;
+    padding: 0; } }
 
-// Image content type
-.mfp-include-image-type(true) {
-  /* Main image in popup */
-  img {
-   &.mfp-img {
-     width: auto;
-     max-width: 100%;
-     height: auto;
-     display: block;
-     line-height: 0;
-     -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     box-sizing: border-box;
-     padding: @mfp-image-padding-top 0 @mfp-image-padding-bottom;
-     margin: 0 auto;
-   }
-  }
-
-  /* The shadow behind the image */
-  .mfp-figure {
-   line-height: 0;
-   &:after {
-     content: '';
-     position: absolute;
-     left: 0;
-     top: @mfp-image-padding-top;
-     bottom: @mfp-image-padding-bottom;
-     display: block;
-     right: 0;
-     width: auto;
-     height: auto;
-     z-index: -1;
-     box-shadow: @mfp-shadow;
-     background: @mfp-image-background;
-   }
-   small {
-     color: @mfp-caption-subtitle-color;
-     display: block;
-     font-size: 12px;
-     line-height: 14px;
-   }
-   figure {
-     margin: 0;
-   }
-  }
-  .mfp-bottom-bar {
-   margin-top: (max(5px, (@mfp-image-padding-bottom - 5px)) * -1); // 
-   position: relative;
-   top: 100%;
-   left: 0;
-   width: 100%;
-   cursor: auto;
-  }
-  .mfp-title {
-   text-align: left;
-   line-height: 18px;
-   color: @mfp-caption-title-color;
-   word-wrap: break-word;
-   padding-right: 40px; // leave some space for counter at right side
-  }
-
-  .mfp-image-holder {
-   .mfp-content {
-     max-width: 100%;
-   }
-  }
-
-  .mfp-gallery {
-   .mfp-image-holder {
-     .mfp-figure {
-       cursor: pointer;
-     }
-   }
-  }
-
-  .mfp-include-mobile-layout-for-image(true) {
-       @media screen and (max-width: 800px) and (orientation:landscape), screen and (max-height: 300px) {
-         /**
-          * Remove all paddings around the image on small screen
-          */
-         .mfp-img-mobile {
-           .mfp-image-holder {
-             padding-left: 0;
-             padding-right: 0;
-           }
-           img {
-             &.mfp-img {
-               padding: 0;
-             }
-           }
-           .mfp-figure {
-             // The shadow behind the image
-             &:after {
-               top: 0;
-               bottom: 0;
-             }
-             small {
-               display: inline;
-               margin-left: 5px;
-             }
-           }
-           .mfp-bottom-bar {
-             background: rgba(0,0,0,0.6);
-             bottom: 0;
-             margin: 0;
-             top: auto;
-             padding: 3px 5px;
-             position: fixed;
-             -webkit-box-sizing: border-box;
-             -moz-box-sizing: border-box;
-             box-sizing: border-box;
-             &:empty {
-               padding: 0;
-             }
-           }
-           .mfp-counter {
-             right: 5px;
-             top: 3px;
-           }
-           .mfp-close {
-             top: 0;
-             right: 0;
-             width: 35px;
-             height: 35px;
-             line-height: 35px;
-             background: rgba(0, 0, 0, 0.6);
-             position: fixed;
-             text-align: center;
-             padding: 0;
-           }
-         }
-       }
-     }
- }
-
-.mfp-include-image-type(@mfp-include-image-type);
-.mfp-include-mobile-layout-for-image(@mfp-include-mobile-layout-for-image);
-
-
-
-// Scale navigation arrows and reduce padding from sides
 @media all and (max-width: 900px) {
   .mfp-arrow {
     -webkit-transform: scale(0.75);
-    transform: scale(0.75);
-  }
+    transform: scale(0.75); }
   .mfp-arrow-left {
     -webkit-transform-origin: 0;
-    transform-origin: 0;
-  }
+    transform-origin: 0; }
   .mfp-arrow-right {
     -webkit-transform-origin: 100%;
-    transform-origin: 100%;
-  }
+    transform-origin: 100%; }
   .mfp-container {
-    padding-left: @mfp-popup-padding-left-mobile;
-    padding-right: @mfp-popup-padding-left-mobile;
-  }
-}
-
-
-// For image-zoom transitions:
-
-.mfp-with-zoom {
-    & .mfp-container, &mfp-bg {
-        opacity: 0;
-        -webkit-backface-visibility: hidden;
-        /* ideally, transition speed should match zoom duration */
-        .transition(all 0.3s ease-out);
-    }
-    &.mfp-ready .mfp-container {
-      opacity: 1;
-    }
-    &.mfp-ready.mfp-bg {
-      opacity: 0.8;
-    }
-    &.mfp-removing .mfp-container, 
-    &.mfp-removing.mfp-bg {
-      opacity: 0;
-    }
-}
-
-
-
-// For Simple fade transitions 
-
-.mfp-fade {
-    &.mfp-bg {
-	    opacity: 0;
-	    -webkit-transition: all 0.15s ease-out; 
-	    -moz-transition: all 0.15s ease-out; 
-	    transition: all 0.15s ease-out;
-    }
-    &.mfp-bg.mfp-ready {
-	    opacity: 0.8;
-    }
-    &.mfp-bg.mfp-removing {
-	    opacity: 0;
-    }
-    &.mfp-wrap .mfp-content {
-	    opacity: 0;
-	    -webkit-transition: all 0.15s ease-out; 
-	    -moz-transition: all 0.15s ease-out; 
-	    transition: all 0.15s ease-out;
-    }
-    &.mfp-wrap.mfp-ready .mfp-content {
-	    opacity: 1;
-    }
-    &.mfp-wrap.mfp-removing .mfp-content {
-	    opacity: 0;
-    }
-}
+    padding-left: 6px;
+    padding-right: 6px; } }
