--- a/data/plugins/bootstrap-multiselect/less/bootstrap-multiselect.less
+++ b/data/plugins/bootstrap-multiselect/less/bootstrap-multiselect.less
@@ -1,8 +1,8 @@
 /**
- * Bootstrap Multiselect (https://github.com/davidstutz/bootstrap-multiselect)
+ * Bootstrap Multiselect (http://davidstutz.de/bootstrap-multiselect/)
  *
  * Apache License, Version 2.0:
- * Copyright (c) 2012 - 2015 David Stutz
+ * Copyright (c) 2012 - 2018 David Stutz
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a
@@ -15,7 +15,7 @@
  * under the License.
  *
  * BSD 3-Clause License:
- * Copyright (c) 2012 - 2015 David Stutz
+ * Copyright (c) 2012 - 2018 David Stutz
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -41,7 +41,7 @@
  * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
  * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-span.multiselect-native-select{
+ span.multiselect-native-select{
   position:relative
 }
 
@@ -66,6 +66,12 @@ span.multiselect-native-select select{
 
   .input-group {
     margin: 5px;
+  }
+
+  .multiselect-reset {
+    .input-group {
+      width: 93%;
+    }
   }
 
   > li {
