Feature(Chosen): Chosen upgrade

--- a/data/plugins/chosen/less/custom-jQuery.chosen.less
+++ b/data/plugins/chosen/less/custom-jQuery.chosen.less
@@ -364,6 +364,8 @@
   .chosen-single {
     abbr {
       background-image: url("@{chosen-image-dir}/chosen-sprite.png") !important;
+      top: 10px;
+      right: 40px;
     }
     div {
       b {
