Feature(Layout): Added selected state css for button group

--- a/data/styles/base/custom/custom-setup.less
+++ b/data/styles/base/custom/custom-setup.less
@@ -15,6 +15,7 @@
 @import "mod_main.less";
 @import "mod_flipswitches.less";
 @import "mod_tabs.less";
+@import "mod_button_groups.less";
 
 @import "mod_sidebar.less";
 @import "mod_footer.less";
