Feature(Layout): Added new design for popover

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -161,3 +161,6 @@
 @modal-footer-bg:             15px;
 @modal-footer-bg:             #fafafa;
 
+///* POPOVER */
+@popover-border-color:         white;
+
