--- a/data/styles/base/custom/mod_popovers.less
+++ b/data/styles/base/custom/mod_popovers.less
@@ -112,7 +112,7 @@
 }
 
 .popover-content {
-  padding: 9px 14px;
+  padding: 23px 12px 22px 12px;
 }
 
 
@@ -141,7 +141,16 @@
 
 // Custom popovers
 .popover {
-  box-shadow: none;
+  box-shadow: 0 0 20px 0 rgba(0,0,0,0.14);
+}
+
+.popover-title{
+  background-color: #fff;
+  border-bottom: 1px solid #fff;
+  font-family: "Open Sans";
+  font-size: 12px;
+  line-height: 17px;
+  padding: 23px 12px 9px 12px;
 }
 
 .popover.popover-danger {
@@ -150,7 +159,7 @@
   color: @white;
   .popover-title {
     background: @brand-danger;
-    border-bottom: 1px solid #d42e2a;
+    border-bottom: 1px solid @brand-danger;
     color: @white;
   }
 }
@@ -197,7 +206,7 @@
   color: @white;
   .popover-title {
     background: @brand-warning;
-    border-bottom: 1px solid #eaad50;
+    border-bottom: 1px solid @brand-warning;
     color: @white;
   }
 }
@@ -244,7 +253,7 @@
   color: @white;
   .popover-title {
     background: @black;
-    border-bottom: 1px solid #2d2d2d;
+    border-bottom: 1px solid @black;
     color: @white;
   }
 }
