Feature(Layout): Update sticky header design for jqGrid with no border

--- a/data/plugins/jqgrid/less/custom-jqgrid.less
+++ b/data/plugins/jqgrid/less/custom-jqgrid.less
@@ -796,4 +796,8 @@ div.drop-actions .drop-content .dropdown-menu > li > a {
   border-right: 1px solid #c3c3c3;
 }
 
+.table-no-border .ui-jqgrid-hdiv.is_stuck {
+  box-shadow: 0 7px 4px -4px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #fff;
+}
 
